fix material
